<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/favorites_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >


    <android.support.v7.widget.RecyclerView
        android:id="@+id/favorites_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/favorites" />

    <TextView
        android:id="@+id/favorite_empty"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorites_is_empty" />

</FrameLayout>