<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/google_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.SearchView
            android:id="@+id/google_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/google" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/google_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/google_search" />

        <TextView
            android:id="@+id/google_empty"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/google_search"
            android:text="@string/nothing_found" />

        <android.support.v4.widget.ContentLoadingProgressBar
            android:id="@+id/google_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/colorPrimary"
            tools:targetApi="lollipop" />
    </RelativeLayout>

</android.support.v4.widget.SwipeRefreshLayout>